# MeshModelRotate

./: .gitignore  README.md  convert_glb_to_ply.py  glbutils.py  mesh2glb copy.py  mesh2glb.py  positioning.py  pyproject.toml  requirements.txt  save_mat_for_matlab.py  setup-env.bat  setup-env.sh  test_positioning.py
Gadi's Scripts/: Find_Mirror_Sym.m  Norm2Posing_for_GUI.m  UzyPosCm_for_GUI.m  positioning.m
Gadi's Scripts/test/: test_positioning_glb.m  test_positioning_simple.m
MATLAB/: README.md  facenormals.m
MATLAB/test/: README_TESTING.md
render/: README.md  pipeline.sh  render_thumbs.py  render_thumbs.sh  slurm_pipeline.sh
